--- a/docker-workshop-5-swarm/docker-compose.yml
+++ b/docker-workshop-5-swarm/docker-compose.yml
@@ -1,25 +1,10 @@
 version: "3.6"
 
 services:
-  postgres:
-    image: postgres:14-alpine
-    container_name: pgsql
+  frontend:
+    image: marianekstend/agenda
     ports:
-      - 5432:5432
-    volumes:
-      - ./volumes/pqsql:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=12345
-      - POSTGRES_USER=admin
-      - POSTGRES_DB=db
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    ports:
-      - "8000:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user@user.user
-      PGADMIN_DEFAULT_PASSWORD: 12345
-    volumes:
-      - ./volumes/pqadmin:/var/lib/pgadmin
+      - "80:80"
+    deploy:
+      mode: replicated
+      replicas: 2
